<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>random_walk</name>
  <version>1.0.0</version>
  <description>Package providing a very simplistic node to make a mobile robot doing a random walk and avoiding obstacles given laser scans collected by the robot.</description>
  <author email="rprocha@isr.uc.pt">Rui P. Rocha</author>
  <maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
